--- a/public/global.css
+++ b/public/global.css
@@ -44,6 +44,9 @@ input:disabled {
 	color: #ccc;
 }
 
+main.svelte-sxl2oo {
+	padding:0em;
+}
 /* button {
 	color: #333;
 	background-color: #f4f4f4;
